# farm

./: README.md
farmcore/: Cargo.toml  farm-core.yaml  farm-mysql.yaml  mysql.yaml
farmcore/src/: lib.rs  main.rs  search.rs  state.rs
farmcore/src/api/: mod.rs  query_parser.rs
farmcore/src/api/documentation/: mod.rs
farmcore/src/api/responses/: mod.rs
farmcore/src/api/v1/: clusters.rs  components.rs  datacenters.rs  kubernetes.rs  migrations.rs  mod.rs  root.rs  servers.rs  switches.rs  vms.rs
farmcore/src/database/: connection.rs  database_helper.rs  mod.rs  query_builder.rs
farmcore/src/database/schema/: mod.rs
farmcore/src/database/schema/migrations/: 001_create_servers.sql  002_create_switches.sql  003_create_virtual_machines.sql  004_create_kubernetes.sql  005_create_datacenters.sql  006_create_server_clusters.sql  007_server_u_height.sql  mod.rs
farmcore/src/database/schema/seeds/: mod.rs
farmcore/src/database/schema/seeds/development/: 001_component_types.sql  002_servers.sql  003_virtual_machines.sql  004_kubernetes.sql  005_datacenters.sql  006_server_clusters.sql  007_switches.sql  008_servers_expanded.sql
farmcore/src/domain/: mod.rs
farmcore/src/domain/bmc/: mod.rs  redfish.rs
farmcore/src/models/: bmc.rs  cluster.rs  components.rs  datacenter.rs  kubernetes.rs  mod.rs  query.rs  server.rs  switch.rs  vm.rs
farmcore/src/repositories/: cluster_repository.rs  component_repository.rs  datacenter_repository.rs  kubernetes_repository.rs  mod.rs  server_repository.rs  switch_repository.rs  vm_repository.rs
farmmanager/: Cargo.toml  (+1 more)
(+157 files in other folders)
