[package]
name = "farm-core"
version = "0.1.0"
edition = "2021"
authors = ["Hungry Banana <HungryBanana7@gmail.com>"]
description = "Farm API Server"
repository = "https://github.com/hungrybanana/farm"

# Define both library and binary targets
[[bin]]
name = "farm-core"
path = "src/main.rs"

[lib]
name = "farm_core"
path = "src/lib.rs"

[dependencies]
colored = "2"
actix-web = "4"
actix-files = "0.6"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "macros", "chrono", "rust_decimal"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"
async-trait = "0.1"
log = "0.4"
env_logger = "0.10"
futures-util = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
sha2 = "0.10"
kube = { version = "0.87", features = ["client", "derive"] }
k8s-openapi = { version = "0.20", features = ["v1_28"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "cookies"] }
url = "2.5"
rust_decimal = { version = "1.35", features = ["serde"] }
